@@ -2008,7 +2008,7 @@ Syscall param poll(ufds.events) points to unaddressable byte(s)
    by 0x........: main (scalar.c:752)
  Address 0x........ is not stack'd, malloc'd or (recently) free'd
 
-Syscall param poll(ufds.reventss) points to unaddressable byte(s)
+Syscall param poll(ufds.revents) points to unaddressable byte(s)
    ...
    by 0x........: main (scalar.c:752)
  Address 0x........ is not stack'd, malloc'd or (recently) free'd
